@@ -36,6 +36,7 @@ Thanks!
 - Remove hover:after element in Perlucida style to prevent WebKit crash in 10.3.9.
 - Fix bug with dragging and dropping folders when group folder was dragged into itself.
 - Prevent crash when deleting folder while editing name.
+- Switch everyone to manual folder sorting.
 
 2.1.0.2103
 ----------
